# rs-mime-detect

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
