[package]
name = "philiprehberger-mime-detect"
version = "0.1.0"
edition = "2021"
authors = ["Philip Rehberger"]
description = "File type detection from content (magic bytes), file extension, and MIME type mapping"
license = "MIT"
repository = "https://github.com/philiprehberger/rs-mime-detect"
keywords = ["mime", "filetype", "detection", "magic", "content-type"]
categories = ["filesystem", "web-programming"]
